--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "immer": "^10.1.1",
     "marked-react": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
