--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "marked-react": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.2",
     "sass": "^1.83.3"
   },
   "devDependencies": {
